--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -495,6 +495,18 @@
     <Filter Include="TopCoder\TCO\2015 Round 2B">
       <UniqueIdentifier>{20e6f901-2cfc-4729-80ce-a76d8c6d1e3d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TopCoder\TCO\2015 Round 2C">
+      <UniqueIdentifier>{ed9e7a64-a42f-4d45-b7af-aa30b84cab4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TopCoder\TCO\2015 Round 2D">
+      <UniqueIdentifier>{afe85b0a-b68f-4a39-acad-bb348d2d343e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TopCoder\TCO\2016 Round 1A">
+      <UniqueIdentifier>{bc448009-9849-4c06-b9af-2a00f899b372}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="TopCoder\TCO\2016 Round 1B">
+      <UniqueIdentifier>{ea49505d-a198-47cd-b392-9b6da7a61a1e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\118.cpp">
@@ -3112,6 +3124,21 @@
     </ClCompile>
     <ClCompile Include="TopCoder\TCO\TCO 2015 Round 2B\Balance.cpp">
       <Filter>TopCoder\TCO\2015 Round 2B</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2015 Round 2C\YetAnotherCardGame.cpp">
+      <Filter>TopCoder\TCO\2015 Round 2C</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2015 Round 2D\BalancedSubstrings.cpp">
+      <Filter>TopCoder\TCO\2015 Round 2D</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2016 Round 1A\EllysTimeMachine.cpp">
+      <Filter>TopCoder\TCO\2016 Round 1A</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2016 Round 1A\EllysSocks.cpp">
+      <Filter>TopCoder\TCO\2016 Round 1A</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\TCO\TCO 2016 Round 1B\ExploringNumbers.cpp">
+      <Filter>TopCoder\TCO\2016 Round 1B</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
