--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3161,6 +3161,9 @@
     <ClCompile Include="TopCoder\SRM 575-599\SRM 599\BigFatInteger.cpp">
       <Filter>TopCoder\575-599</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10377.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
