--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1196,9 +1196,6 @@
     <ClCompile Include="UVaOJ\10297.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
-    <ClCompile Include="UVaOJ\10300.cpp">
-      <Filter>UVa\10300</Filter>
-    </ClCompile>
     <ClCompile Include="UVaOJ\10302.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
@@ -3162,6 +3159,9 @@
       <Filter>TopCoder\575-599</Filter>
     </ClCompile>
     <ClCompile Include="UVa\10300\10377.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10300\10300.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
   </ItemGroup>
