--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3164,6 +3164,9 @@
     <ClCompile Include="UVa\10300\10300.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10855.cpp">
+      <Filter>UVa\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
